tests/cases/compiler-development/artifact/errors/diagnostic-trait-duplicate-decl.diagnostic
diagnostic error code=T0001 family=type message="duplicate trait 'Show'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/traits/errors/trait-duplicate-decl.ari" display="tests/cases/traits/errors/trait-duplicate-decl.ari" bytes=117
  Label index=0 role=primary source_id=0 source="tests/cases/traits/errors/trait-duplicate-decl.ari" line=5 column=7 end_line=5 end_column=11 byte_start=48 byte_end=52 message=""
  Snippet label=0 text="  --> tests/cases/traits/errors/trait-duplicate-decl.ari:5:7\n   |\n 5 | trait Show[T] {\n   |       ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/traits/errors/trait-duplicate-decl.ari" line=1 column=7 end_line=1 end_column=11 byte_start=6 byte_end=10 message="previous declaration of trait 'Show'"
  Snippet label=1 text="  --> tests/cases/traits/errors/trait-duplicate-decl.ari:1:7\n   |\n 1 | trait Show[T] {\n   |       ^^^^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="rename or remove one of the trait declarations"
